# ai-news-feed

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 287ceeba6e12_add_markdown_field.py  9d9b69094de1_initial_migration.py  eb9cfefc6f7f_add_digest.py
app/: main.py  runner.py  settings.py
app/agent/: digest.py
app/agents/: curator.py  email.py
app/db/: connection.py  models.py  repo.py
app/profiles/: user.py
app/scrapers/: __init__.py  anthropic.py  base.py  openai.py  youtube.py
app/scrappers/: youtube.py
app/services/: email.py  process_anthropic.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py  youtube.py
deploy/: Dockerfile  compose.yml
docker/: Dockerfile
