[project]
name = "ai-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "feedparser>=6.0.12",
    "html-to-markdown>=2.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
